Refactored to use Utils.detectWhen(...)